[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/objects/object_template.gd" type="Script" id=1]
[ext_resource path="res://assets/16 - Environments/light.png" type="Texture" id=2]

[node name="ObjectTemplate" type="RigidBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="Texture" type="AnimatedSprite" parent="."]

[node name="Collision" type="CollisionShape2D" parent="."]

[node name="CollisionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="Collision" type="CollisionShape2D" parent="CollisionArea"]

[node name="Occluder" type="LightOccluder2D" parent="."]

[node name="Light" type="Light2D" parent="."]
texture = ExtResource( 2 )
texture_scale = 0.5
energy = 0.5
shadow_enabled = true
shadow_filter = 2
shadow_filter_smooth = 50.0

[connection signal="area_entered" from="CollisionArea" to="." method="on_area_entered"]
[connection signal="body_entered" from="CollisionArea" to="." method="on_body_entered"]
